tests/pos/i4739.java
public class TestJava {
  int foo;
  int foo() {
    return this.foo;
  }
}