tests/neg/alpha-override/B_1.java
// Java
public class B_1 extends A_1 {
  public int bar() {
    return 2;
  }
}
